--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "morgan": "^1.10.0",
     "next": "12.0.10",
+    "oracledb": "^5.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "nodemon": "^2.0.15"
   }
 }
